--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="shortcut icon"
+      href="images/camera-icon.png"
+      type="image/png"
+      sizes="32x32"
+    />
     <title>Studio One</title>
     <link rel="stylesheet" href="styles.css">
     <link
